--- a/source/3_Lesson.org
+++ b/source/3_Lesson.org
@@ -99,7 +99,7 @@
 :HTML_CONTAINER_CLASS: badge
 :END:
 
-- Once you have created the general layput and tested your webpage is working as intended, click [[https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php][here]] for the self assessment. You will be awarded *Silver*, *Gold* and/or *Platinum* badges based on your progress.
+- Once you have created the general layout and tested your webpage is working as intended, click [[https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php][here]] for the self assessment. You will be awarded *Silver*, *Gold* and/or *Platinum* badges based on your progress.
 - You can always come back here to re-take the assessment quiz once you have finished the task.
 
 
