--- a/source/2_Lesson.org
+++ b/source/2_Lesson.org
@@ -101,10 +101,11 @@
 - The following are six webpage layouts that you can pick from for your independent web development poject.
 - Click on each one to see what a finished webpage may look like.
 - There will be a contest at the end of this project across year group in different categories(will be anounced here soon).
-- Please follow this tutorial on how to get your webpage started.
+- There is a video tutorial after the templates on how to get your webpage started.
+
 
 #+BEGIN_HTML
-
+<h2>Webpage layouts for you to choose</h2>
 <table>
 <tr>
 <td><a target="_self" href="basic1-examples.html"><img src="./img/layout-basic1.jpg" alt="layout-1" width="320" height="280"></a>
@@ -137,14 +138,22 @@
 <td>Advanced Layout 2</td>
 </tr>
 </table>
+<h3>Helpful Resources</h3>
 #+END_HTML
-
 - Useful resources on the Internet
 
   + [[http://www.w3schools.com/cssref/css_colors.asp][HTML colour picker]]
   + if you forget about some tags or just what to learn some new ones, [[http://www.w3schools.com/html/default.asp][w3school]]s 
   + if you would like to learn more CSS style tricks, also on [[http://www.w3schools.com/css/default.asp][w3schools]]. 
+- A video tutorial to get you started:
 
+#+BEGIN_HTML
+<video width="640" height="480" controls>
+  <source src="./img/centerThePage.mp4" type="video/mp4">
+
+  Your browser does not support the video tag.
+</video>
+#+END_HTML
 
 ** Badge It - Silver
 :PROPERTIES:
