added homework task 1

--- a/source/homework.org
+++ b/source/homework.org
@@ -20,9 +20,7 @@
       <li><a href="2_Lesson.html">Week2</a></li>
       <li><a href="3_Lesson.html">Week3</a></li>
       <li><a href="4_Lesson.html">Week4</a></li>
-      <li><a href="5_Lesson.html">Week5</a></li>
-      <li><a href="6_Lesson.html">Week6</a></li>
-      <li><a href="7_Lesson.html">Week7</a></li>
+>
       <li><a href="homework.html">Homework</a></li>
 
     </ul>
@@ -96,47 +94,30 @@
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: activity
 :END:
-** Homework 1 - get around the web for web
+** Homework 1 - use of images
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
 
-- One of the important skill as as a web developer is to be able to use the vast information on the Internet to help you achieve the desired outcomes with your webpages.
-- You have learned some neat html tags in your lessons. But there are many more tags that will make your webpages standout.
-- One of the popular website to learn about those skills is [[https://www.w3schools.com/html/default.asp][w3schools.com]]
-- the w3schools.com website also allows to practice your skills online so you can see the effect right away.
-
-- Your homework:
-  1. Explore  [[https://www.w3schools.com/html/default.asp][w3schools.com]]  website and learn 3 new tags and use the =Try It Yourself= facility to practice those.
-  2. Write down what those tags are, what they do and wheather they need both a start and a end tag.
- 
-- Answers to be submitted as a text file or image for the homework 1 badge on [[https://www.bournetolearn.com/][BourneToLearn]].
+- You have used images in your webpages.
+- You also learned how to specify size of an image so it will fit with your overall webpage design.
+- There are two types of images: vector and bitmap
+- Your homework will be as following:
+  1. Research what those two types of images are with examples.
+  2. The advantages and disadvantges of each.
+  3. When is better to use one type over the other.
 
 ** Homework 2 - Identify the errors
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
 
-- Tom has created two html files: =index.html= and =mySecondPage.html=
-- Tom made the links in each of the two files so they should link to each other by a hyperlink.
-- Tom opened the =index.html= file in browser, but disapponitedly, it did not work.
-- There are some mistakes in both of Tom's files. Can you identify all of the erros Tom has made in his two webpage files? Hints: there 3 errors in the each of the files.
-- Tom's =index.html= file:
-[[./img/index-err.png]]
-- Tom's =mySecondPage.html= file:
-[[./img/secondPageErr.png]]
-
+- coming soon
 	 
 ** Homework 3 - Literacy Task
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- In "How the Internet Works" unit, you have learned what the Internet is and what the world wide web(WWW) is. I hope you now understand they are two different things.
-- Do some your own research on the world wide web on the Internet, write a 200 words summary on the following points:
-  1. What role did sir Tim Berners-Lee play in creating the WWW and the mark up language you have been using to create webpages? 
-  2. What is a web server?
-  3. BEFORE the Internet and the WWW, what did people in the past use to find out information such as business/school phone numbers, movie show times, and what did people do if they want to conduct some research on a holiday destination?
-- Upload your work to www.bournetolearn.com or hand it in to your teacher if uploading is impossible.
-
+- coming soon
 
 
